Implemented Amazon product scrape feature
