# internal/routes/route.go
@@ -2,6 +2,7 @@ package routes
 
 import (
 	"github.com/gin-gonic/gin"
+	"github.com/jobayer12/ScrapifyGo/internal/scrape/amazon"
 	"github.com/jobayer12/ScrapifyGo/internal/scrape/email"
 	"github.com/jobayer12/ScrapifyGo/internal/scrape/sitemap"
 	"github.com/jobayer12/ScrapifyGo/internal/scrape/url"
@@ -12,4 +13,5 @@ func Routes(g *gin.RouterGroup) {
 	g.GET("/sitemap", middleware.SitemapValidator(), sitemap.ScrapeSitemap)
 	g.GET("/email", email.ScrapeEmail)
 	g.GET("/url", url.UrlScrape)
+	g.GET("/amazon", amazon.ScrapeAmazonSearch)
 }
